--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,8 +1,11 @@
-platform :ios, '10.0'
+platform :ios, '13.0'
 use_frameworks!
+
+target 'objc-sdk-test-app' do
+  pod 'objc-sdk', :path => '../'
+  pod '!ProtoCompiler-gRPCPlugin', '~> 1.0'
+end
 
 target 'objc-sdk_Tests' do
   pod 'objc-sdk', :path => '../'
-  pod '!ProtoCompiler-gRPCPlugin', '~> 1.0'
-
 end
