Adding release script

--- a/Example/SensoryCloudExampleApp/config.ini
+++ b/Example/SensoryCloudExampleApp/config.ini
@@ -4,5 +4,5 @@ isSecure=<ture/false>
 tenantID=<Your-Tenant-ID>
 credential=<Your-Credential>
 enrollmentType=sharedSecret
-deviceID=<Your-Device-ID> // For iOS apps, we recommend overriding this with a device generated identifier
-deviceName=<Your-Device-Name> // For iOS apps, we recommend overriding this with a device generated/user entered device name
+deviceID=<Your-Device-ID> # For iOS apps, we recommend overriding this with a device generated identifier
+deviceName=<Your-Device-Name> # For iOS apps, we recommend overriding this with a device generated/user entered device name
